Moved overwrites to separate directory

--- a/docker/index.html
+++ b/docker/index.html
@@ -8,7 +8,7 @@
 
         <link rel="stylesheet" href="../reveal.js/css/reveal.css">
         <link rel="stylesheet" href="../reveal.js/css/theme/black.css">
-        <link rel="stylesheet" href="css/overwrites.css">
+        <link rel="stylesheet" href="../overwrites/css/overwrites.css">
 
         <!-- Theme used for syntax highlighting of code -->
         <link rel="stylesheet" href="../reveal.js/lib/css/zenburn.css">
