Added QRcode with docker talk link

--- a/docker/index.html
+++ b/docker/index.html
@@ -8,7 +8,7 @@
 
         <link rel="stylesheet" href="../reveal.js/css/reveal.css">
         <link rel="stylesheet" href="../reveal.js/css/theme/black.css">
-        <link rel="stylesheet" href="../overwrites/scss/overwrites.css">
+        <link rel="stylesheet" href="../overwrites/css/overwrites.css">
 
         <!-- Theme used for syntax highlighting of code -->
         <link rel="stylesheet" href="../reveal.js/lib/css/zenburn.css">
@@ -32,6 +32,7 @@ FROM scratch
 
 MAINTAINER Michal Wojtowicz michal@wojtowicz.ovh
                     </code></pre>
+                    <img src="qrcodeLink.png" alt="QRcode link" class="qrCodeLink"/>
                 </section>
 
                 <section>
@@ -492,8 +493,9 @@ USER appuser</code></pre>
                 <section>
                     <h1>Thank you for your time</h1>
                     <p>
-                        Slides are available at
+                        Slides are available on
                         <a href="https://michailw.github.io/talks/docker/">https://michailw.github.io/talks/docker/</a>
+                        <img src="qrcodeLink.png" alt="QRcode link" class="qrCodeLink"/>
                     </p>
                 </section>
 
