Changed theme to beige

--- a/docker/index.html
+++ b/docker/index.html
@@ -7,7 +7,7 @@
         <title>Docker from scratch</title>
 
         <link rel="stylesheet" href="../reveal.js/css/reveal.css">
-        <link rel="stylesheet" href="../reveal.js/css/theme/black.css">
+        <link rel="stylesheet" href="../reveal.js/css/theme/beige.css">
         <link rel="stylesheet" href="../overwrites/css/overwrites.css">
 
         <!-- Theme used for syntax highlighting of code -->
