Added slide with list of docker products

--- a/docker/en/index.html
+++ b/docker/en/index.html
@@ -50,6 +50,18 @@ MAINTAINER Michal Wojtowicz michal@wojtowicz.ovh
 
                 <section>
                     <section>
+                        <h3>Products of Docker Inc.</h3>
+                        <ul>
+                            <li class="fragment fade-up">libcontainerd</li>
+                            <li class="fragment fade-up">Docker engine</li>
+                            <li class="fragment fade-up">Docker hub</li>
+                            <li class="fragment fade-up">Docker machine</li>
+                            <li class="fragment fade-up">Docker registry</li>
+                            <li class="fragment fade-up">Docker-compose</li>
+                            <li class="fragment fade-up">Docker swarm</li>
+                        </ul>
+                    </section>
+                    <section>
                         <h3>What is Docker? (#1)</h3>
                         <ul>
                             <li class="fragment fade-up">virtualization solution</li>
