--- a/docker/pl/index.html
+++ b/docker/pl/index.html
@@ -50,6 +50,18 @@ MAINTAINER Michal Wojtowicz michal@wojtowicz.ovh
 
                 <section>
                     <section>
+                        <h3>Produkty firmy Docker Inc.</h3>
+                        <ul>
+                            <li class="fragment fade-up">libcontainerd</li>
+                            <li class="fragment fade-up">Docker engine</li>
+                            <li class="fragment fade-up">Docker hub</li>
+                            <li class="fragment fade-up">Docker machine</li>
+                            <li class="fragment fade-up">Docker registry</li>
+                            <li class="fragment fade-up">Docker-compose</li>
+                            <li class="fragment fade-up">Docker swarm</li>
+                        </ul>
+                    </section>
+                    <section>
                         <h3>Czym jest Docker? (#1)</h3>
                         <ul>
                             <li class="fragment fade-up">technologia wirtualizacji</li>
